# nexus

./: .gitignore  CLAUDE.md  MANUAL_TEST_upload_eval.md  README.md  brand.py  pyproject.toml  setup.sh
chart_settings/: __init__.py  apply_chart_settings.py  chart_settings.json
docs/: 00_PRINCIPLES.md  01_EXPERIMENT_STANDARD.md  10_ARCHITECTURE.md  11_LOGGER_SETUP.md  12_SCHEDULED_SYNC.md  13_POST_UPLOAD.md  20_MLFLOW_SERVER_SETUP.md  21_AIRGAPPED_GPU_SERVER_SETUP.md  22_BACKUP.md  22_BACKUP_GUIDE.md  23_CLEANUP.md  30_ADVANCED_FEATURES.md  31_CHART_SETTINGS.md  31_CHART_SETTINGS_GUIDE.md  32_EVAL_ARTIFACT_INGESTION.md  ADVANCED_FEATURES.md  ARCHITECTURE.md  CONFLUENCE_MLFLOW_GUIDE.md  EXPERIMENT_PAGE_TEMPLATE_KO.md  EXPERIMENT_STANDARD_KO.md  EXPERIMENT_TEMPLATE.md  INTEGRATION_GUIDE.md  INTRO_KO.md  LOGGER_SETUP.md  MLFLOW_SERVER_SETUP.md  MLFLOW_SERVER_SETUP_KO.md  POST_UPLOAD_GUIDE.md  PRESETS_GUIDE.md  SERVER_SETUP_GUIDE_KO.md  TESTING_GUIDE_KO.md  VALIDATION_GUIDE.md  nexus_guide.html
docs/_scratch_rollout_glue/: README.md  play.py.recorder_variant.py  play.py.snippet.py  play.sh  train.py.snippet.py  train.sh  train_and_eval.sh
docs/_scratch_rollout_glue/plans/: 01-initial-architecture.html  02-recorder-and-cookbook.html
docs/ko/: 01_INTRO.md  02_EXPERIMENT_STANDARD.md  README.md
logger/: __init__.py  dual_logger.py  git_utils.py  mlflow_logger.py  model_registry.py  rl_metrics.py  sweep_logger.py  system_metrics.py  tb_logger.py
nexus/: brand.py
nexus/logger/: __init__.py  dual_logger.py  eval_logger.py  git_utils.py  mlflow_logger.py  model_registry.py  rl_metrics.py  run_info.py  sweep_logger.py  system_metrics.py  tb_logger.py
nexus/post_upload/: __init__.py  config.py  history.py  upload_eval.py  upload_tb.py  verify_tb.py
post_upload/: config.py  history.py  post_config.example.json  register_model.py  tb_to_mlflow.py  upload_eval.py  upload_tb.py  verify_tb.py  verify_upload.py
presets/: __init__.py  __main__.py  cli.py  renderer.py  resolver.py  schema.py
presets/examples/: _sample_demo.py  ppo_lr_ablation.yaml  sample_output.html  seed_spread.yaml  sim_to_real_gap.yaml
scheduled_sync/: _activate_venv.sh  _parse_sync_config.py  backup_mlflow.sh  export_delta.py  import_delta.py  migrate_filestore_to_sqlite.py  restore_mlflow.sh  start_local_mlflow.sh  sync_config.example.json  sync_mlflow_all.sh  sync_mlflow_to_server.sh  validate_sync.sh
tests/: smoke_test.py
