[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-logger"
version = "0.2.0"
description = "Unified RL logging package: MLflow + TensorBoard"
# Default install is client-only (training nodes, CI):
#   mlflow-skinny ships MlflowClient + tracking APIs without Flask, SQLAlchemy,
#   alembic, gunicorn, etc. Avoids transitive conflicts with frameworks like
#   Isaac Lab that pin prettytable/starlette.
dependencies = [
    "mlflow-skinny>=2.0,<3",
    "tensorboardX",
]
requires-python = ">=3.10"

[project.optional-dependencies]
# Install ONLY on the host that runs the central MLflow server / UI.
# Pulls in the full mlflow distribution (Flask, SQLAlchemy, alembic, ...).
#   pip install "nexus-logger[server] @ git+https://github.com/jonghochoi/nexus.git"
server = ["mlflow>=2.0,<3"]

# Pipeline B uploader CLIs. Optional — they pull in tbparse/pandas/rich which
# are not needed on training nodes that only call ``make_logger()``. Install
# with: pip install "nexus-logger[post_upload] @ git+..."
post_upload = [
    "tbparse>=0.0.8",
    "pandas",
    "rich",
]

[project.scripts]
# Pipeline B CLI entry points — installed on PATH by pip.
# Equivalent to ``python -m nexus.post_upload.<module>``.
nexus-upload-tb   = "nexus.post_upload.upload_tb:main"
nexus-upload-eval = "nexus.post_upload.upload_eval:main"
nexus-verify-tb   = "nexus.post_upload.verify_tb:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nexus*"]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.format]
skip-magic-trailing-comma = true
